Closed
Bug 82624
Opened 24 years ago
Closed 24 years ago
printing of iframes print a large gray strip
Categories
(Core :: Printing: Output, defect)
Tracking
()
VERIFIED
FIXED
mozilla0.9.2
People
(Reporter: dcone, Assigned: dcone)
References
()
Details
Attachments
(6 files)
|
3.37 KB,
patch
|
Details | Diff | Splinter Review | |
|
668 bytes,
patch
|
Details | Diff | Splinter Review | |
|
196.86 KB,
application/octet-stream
|
Details | |
|
916 bytes,
patch
|
Details | Diff | Splinter Review | |
|
732 bytes,
patch
|
Details | Diff | Splinter Review | |
|
747 bytes,
patch
|
Details | Diff | Splinter Review |
if you print a page containing an iframe, you will get a large gray stripe going
down the page.
<iframe src = "test.jpg">
</iframe>
| Assignee | ||
Comment 1•24 years ago
|
||
| Assignee | ||
Comment 2•24 years ago
|
||
This patch changes the views back to a normal hieght after the reflow with the
increased height.
| Assignee | ||
Comment 3•24 years ago
|
||
| Assignee | ||
Comment 4•24 years ago
|
||
this patch just makes sure we dont pass any transparent views to the display
routine.
Comment 5•24 years ago
|
||
Wow, that is simpler.
So calling view->SetContentTransparency(PR_FALSE) somehow prevents the
transparent views from getting passed to the display routine? I don't understand
how that works... can you enlighten me?
Comment 6•24 years ago
|
||
OK, Don just clued me in. I am fine with the change, but we really need a
comment in there saying something like:
// The views for the page should never be transparent but they are in some cases.
// Forcing the view to non-transparent until we can track down the root cause
// - see bug XXXXX
where XXXXX is the bug number of a new bug :)
given that, sr=attinasi
Comment 7•24 years ago
|
||
Maybe we should add a style rule for the PageFrame to set its background color
to white? Lets file a new bug to investigate that. For a short term fix this is
fine though.
r=kmcclusk@netscape.com
Comment 8•24 years ago
|
||
I applied this patch to my MOZILLA_0_9_BRANCH build, and it did not fix the gray
strip problem. I am building on Linux and printing to a Postscript file. I am
using GTK. I have also tried this fix in my GTK embedded browser, and it does
not seem to be working. What platform are you testing this on?
| Assignee | ||
Comment 9•24 years ago
|
||
I tested this on Windows nt 4.0 and Windows 2000. This is cross platform code..
and should not matter what system your on. What URL are you using to test this.
What about the simple test case in this bug.. does that fail here. I also
printed www.aol.com, which had the 4 iframes and 4 gray strips.. and that
printed fine also. I am at a lose here on whats going on.
Comment 10•24 years ago
|
||
Don- I checked out a clean version of the MOZILLA_0_9_BRANCH and applied the
patch. I built and tested aol.com and the simple test. Both produce gray strips
down the page. This build was on Linux using the following build config:
./configure --with-gtk=yes --disable-verbose-config-defs --disable-tests
--disable-mailnews --with-png=no --enable-cpp-rtti --enable-reproducible-build
make
| Assignee | ||
Comment 11•24 years ago
|
||
Verified that the simple patch does not work on Linux. I have not a clue why.
Micheal.. can you test the first patch.. see if that clears up your problem.
Comment 12•24 years ago
|
||
Don- I tested the first patch, and I do get a different results. The result is
not correct but it is different. The gray stripe is no longer down the entire
page. Now the gray stripe is only beside the image, but in addition to that, the
image is drawn twice with different offsets. I will attach the Postscript files
that were created for each patch.
Comment 13•24 years ago
|
||
Updated•24 years ago
|
Target Milestone: --- → mozilla0.9.2
Updated•24 years ago
|
Severity: normal → major
| Assignee | ||
Comment 14•24 years ago
|
||
| Assignee | ||
Comment 15•24 years ago
|
||
| Assignee | ||
Comment 16•24 years ago
|
||
2 part patch is attached. Part 1 is a temporary patch, I created a bug to track
the problem with the transparent large views that this fixes. The bug number is
in the patch for tracking.
Part 2 reduces the height of the page that is created, this is needed for Linux
which has an overflow problem with very large regions, this corrects that
problem and does not effect other pages when printing.
Comment 17•24 years ago
|
||
100 was a completely arbitrary value, and 10 should work fine.
r=rods
Comment 18•24 years ago
|
||
Don- I applied the 2 patches and things look ok as long as you print with the
paper size set to 8.5 X 11. If you choose LEGAL paper size, the gray strips are
back.
| Assignee | ||
Comment 19•24 years ago
|
||
Micheal can you try again, but with the line
const PRInt32 kHundredPagesHigh = 10;
changed to
const PRInt32 kHundredPagesHigh = 5;
I think legal size may overflow the page hieght.. see if this works.
Comment 20•24 years ago
|
||
Don I changed "const PRInt32 kHundredPagesHigh = 5;" and that fixes the gray
strips with legal paper size. Thanks!
| Assignee | ||
Comment 21•24 years ago
|
||
Comment 22•24 years ago
|
||
Provided this has been tested with all supported paper sizes, sr=attinasi
Comment 23•24 years ago
|
||
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
Comment 24•24 years ago
|
||
I appears 5 is an ok value also r=rods
| Assignee | ||
Comment 25•24 years ago
|
||
Fixed
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 26•24 years ago
|
||
verified in 6/21 build.
You need to log in
before you can comment on or make changes to this bug.
Description
•