Make the PageFrame not transparent for printing.  b=82624 r=rods sr=attinasi a=asa